# otus_cpp_allocator

allocator/: CMakeLists.txt  allocator.h  list.h  main.cxx
